--- a/src/views/html/assets/scss/common/_layout.scss
+++ b/src/views/html/assets/scss/common/_layout.scss
@@ -8,11 +8,11 @@ body {
 
 main {
 	position: relative;
-	padding-bottom: 100px;
-	@include media-max($l) {
-		margin-top: $head-h-m;
-		padding-bottom: 70px;
-	}
+	//padding-bottom: 100px;
+	//@include media-max($l) {
+	//	margin-top: $head-h-m;
+	//	padding-bottom: 70px;
+	//}
 }
 .pf_center_wrap {
 	max-width: 1700px;
@@ -62,15 +62,8 @@ main {
 		height: 100%;
 		@include flex(between);
 	}
-	@include media-max($xl) {
-		position: relative;
-		height: $head-h-m;
-		width: 100%;
-		padding: 15px 0;
-		@include flex(s);
-		background: none;
-	}
-	@include media-max($l) {
+
+	@include media-max($m) {
 			
 	height: $head-h-m;
 	}
@@ -183,15 +176,14 @@ main {
 	margin-top: 40px;
 	&__bg {
 		position: fixed;
-		bottom: 10%;
+		bottom: -10%;
 		left: 50%;
 		width: 100px;
 		height: 100px;
-		transform: translateX(-50%);
+		transform: translateX(-50%) scale(0.0);
 		border-radius: 50%;
 		background-color: $bg-2;
-		scale: 1;
-		//display: none;
+		pointer-events: none;
     background-image: linear-gradient(to bottom,  $bg-2 40%, #041c86 120%);
 
 	}
