--- a/src/views/html/assets/scss/common/_layout.scss
+++ b/src/views/html/assets/scss/common/_layout.scss
@@ -511,8 +511,9 @@ main {
 			color: $text-3;
 			padding-inline: 20px;
 			padding-block: 10px;
-			@include font-size(16px, 30px);
+			@include font-size(16px, 28px);
 			display: block;
+			font-weight: 400;
 			&.active {
 				color: #fff;
 				font-weight: 600;
