--- a/src/views/html/assets/scss/page/work.scss
+++ b/src/views/html/assets/scss/page/work.scss
@@ -8,13 +8,13 @@
 	.tit_wrap {
 		@include flex(column);
 		//border-bottom: 1px solid $text-3;
-		gap:80px;
+		gap:60px;
 		align-items: center;
-		margin-bottom: 100px;
+		margin-bottom: 60px;
 		@include media-max($m) {
 			flex-direction: column;
-			gap: 40px;
-			margin-bottom: 40px;
+			gap: 20px;
+			margin-bottom: 0;
 		}
 		.motion_txt{
 			overflow: hidden;
@@ -34,7 +34,21 @@
 
 .work{
 	.section_work{
-		padding-top: 5%;
+		padding-top: 4%;
+	}
+
+	
+	.tit_wrap{
+		@include media-min($l) {
+			flex-direction: row;
+			justify-content:space-between  ;
+				margin-bottom: 60px;
+		}
+
+		.tit {
+			@include font-size(40px, 100px);
+			
+		}
 	}
 
 }
