--- a/src/views/html/assets/scss/common/_board.scss
+++ b/src/views/html/assets/scss/common/_board.scss
@@ -29,6 +29,10 @@
 		line-height: 1.28;
 		text-align: center;
 		height: 24px;
+		@include media-max($m) {
+				font-size: 13px;
+				padding: 10px 0px;
+		}
     &.align_l{
       text-align: left;
     }
