--- a/src/views/html/assets/scss/common/_variables.scss
+++ b/src/views/html/assets/scss/common/_variables.scss
@@ -460,6 +460,7 @@ $fc-gray: #ebebf599;
 //$black: #222;
 $point: #7346f3;
 $point2: #000ac9;
+$point3: #0e8ef9;
 $point-light: #c9ebeb;
 $gray: #e2e7ed;
 $gray-dark: #2b3141;
