--- a/src/views/html/assets/scss/component/portfolio.scss
+++ b/src/views/html/assets/scss/component/portfolio.scss
@@ -77,7 +77,7 @@
 			justify-content: flex-end;
 			gap: 10px;
 			color: $text-3;
-			font-size: 16px;
+			font-size: 18px;
 			line-height: 1.5;
 			@include media-max($m) {
 				font-size: 14px;
@@ -107,13 +107,13 @@
 		}
 
 		.tit {
-			font-size: 28px;
+			font-size: 30px;
 			font-weight: 600;
 			margin-bottom: 10px;
 		}
 
 		.desc {
-			font-size: 18px;
+			font-size: 20px;
 			color: $text-3;
 			@include flex(s);
 			gap: 8px;
@@ -130,13 +130,15 @@
 				gap: 3px;
 			}
 			.link {
-				color: $point;
-				border-bottom: 1px solid $point;
+				margin-top: 10px;
+				//color: $point;
+				//border-bottom: 1px solid $point3;
 				@include flex(y);
 				gap: 2px;
-
+				font-size: 18px;
+				font-weight: 400;
 				.icon_link path {
-					stroke: $point;
+					stroke: #fff;
 				}
 			}
 			&.skills,
